test/interaction/Issue1365.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "?0 : Alg _Ψ_534 _X_535 ?1 : _Ω_533 ⇛[ _f_536 ] _Ψ_534 ?2 : _x_539 ∈ ⟦ _Ω_533 ⟧ (_X_535 ∘ _f_536) _I_531 : Set [ at Issue1365.agda:165.37-43 ] _J_532 : Set [ at Issue1365.agda:165.37-43 ] _Ω_533 : Sig _I_531 [ at Issue1365.agda:165.37-43 ] _Ψ_534 : Sig _J_532 [ at Issue1365.agda:165.37-43 ] _X_535 : Pow _J_532 [ at Issue1365.agda:165.37-43 ] _f_536 : _I_531 → _J_532 [ at Issue1365.agda:165.37-43 ] _x_539 : _I_531 [ at Issue1365.agda:165.37-59 ] _541 : f i .proj₂ ∈ (Ω″ ⋆ W) [ at Issue1365.agda:165.37-64 ] ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Failed to solve the following constraints: _X_535 (_f_536 _x_539) =< μ (Ω″ ⋆^C W) (f i .proj₂) (blocked on _X_535)" nil)
((last . 1) . (agda2-goals-action '(0 1 2)))
(agda2-info-action "*Error*" "Issue1365.agda:165.37-64: error: [UnequalTerms] (_x.proj₁_570 , _x.proj₂_571) ∈ (_V_546 (φ = φ) (m = m) (p = p) (k = k) (v = v) ∘ (λ r → proj₁ r)) → (_x.proj₁_570 , _x.proj₂_571) ∈ ((((λ o → Ω″ .Parameter o) ◃ (λ {o} → Ω″ .Arity) / (λ {o} → Ω″ .input)) ⋆ (λ z → W z)) ∘ (λ r → proj₂ r)) !=< μ (Ω″ ⋆^C W) (f i .proj₂) when checking that the expression weaken ? ? ? has type f i .proj₂ ∈ (Ω″ ⋆ W)" nil)
((last . 3) . (agda2-maybe-goto '("Issue1365.agda" . 4948)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
(agda2-info-action "*Error*" "Issue1365.agda:165.37-64: error: [UnequalTerms] (_x.proj₁_570 , _x.proj₂_571) ∈ (_V_546 (φ = φ) (m = m) (p = p) (k = k) (v = v) ∘ (λ r → proj₁ r)) → (_x.proj₁_570 , _x.proj₂_571) ∈ ((((λ o → Ω″ .Parameter o) ◃ (λ {o} → Ω″ .Arity) / (λ {o} → Ω″ .input)) ⋆ (λ z → W z)) ∘ (λ r → proj₂ r)) !=< μ (Ω″ ⋆^C W) (f i .proj₂) when checking that the expression weaken ? ? ? has type f i .proj₂ ∈ (Ω″ ⋆ W)" nil)
((last . 3) . (agda2-maybe-goto '("Issue1365.agda" . 4948)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
